# aws-genai-pro-prep

./: .gitignore  README.md
week-1-aws-fundamentals/: ARCHITECTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  samconfig.toml  template.yaml
week-1-aws-fundamentals/events/: hello_get.json  s3_list.json  s3_put.json
week-1-aws-fundamentals/scripts/: README.md  clean_cache.py  s3_operations.py
week-1-aws-fundamentals/src/: lambda_function.py
week-1-aws-fundamentals/tests/integration/: test_deployed_stack.py
week-1-aws-fundamentals/tests/unit/: conftest.py  test_hello.py  test_s3.py
